# Test_Algorithms_App

./: .env.example  .gitignore  CLEANUP_COMPLETE.md  Data_Specification.docx  Decode_Dataset.py  Makefile  README.md  RandomForest.py  RandomForest_Test_Train.py  labels.csv  labels_template.csv  pyproject.toml  pytest.ini  requirements.txt  test_labels.csv
.claude/: settings.local.json
Decode_Dataset/: DecodeDataset.py  DecodeDataset_Doc.md  RF_Test_Acc-Gyro.py
Decode_Dataset/DecodeDataset_Train_Test/: RandomForest_Train.py
Decode_Dataset/results/: results.json  results.md
Sample_DataSet/: Decode_SampleDataset.py  SampleDataSet_Doc.md  SampleDataset
Sample_DataSet/SampleDataset_Jan-28/: meta_sampleDataset.json
Sample_DataSet/SampleDataset_Jan-29/: Decode_SampleDataset_Jan-29.py  RF_Test.py  RandomForest-Train.py  RandomForest-Train_Doc.md  SampleDataSet_Jan-29_Doc.md  raw.json  results_Jan-29.csv
Sample_DataSet/models/: random_forest_model.pkl
Sample_Dataset_Acc/SampleDataset_DataByAI/: RF_Train_Test.py
Sample_Dataset_Acc_Gyro/: DecodeDataset.py  DecodeDataset_Doc.md  RF_Test_Acc-Gyro.py
backend/: README.md  config.py  detector.py  main.py  requirements.txt  schemas.py  test_api.py  utils.py
configs/: dataset.yaml  features.yaml  inference.yaml  training.yaml
data/: DataDescription.md
docs/: PROJECT_STRUCTURE.md
outputs/: evaluation_report.txt  extracted_features.csv  trained_model.joblib
scripts/: generate_report.py  setup_project.py
src/acare_ml/: cli.py
tests/: test_evaluation.py  test_subjects.py  test_validation.py
(+155 files in other folders)
